# active_object_fusion

./: .gitignore  README.md  build.sh
eval/: CameraTrajectory_noplane.txt  CameraTrajectory_plane.txt  Objects_with_points_for_read.txt  PlaneFeature.txt
include/: Frame.h  FrameDrawer.h  Global.h  Map.h  MapDrawer.h  MapPoint.h  MapPublisher.h  Object.h  System.h  Tracking.h  Viewer.h
ros_test/: CMakeLists.txt  package.xml
ros_test/app/: ros_rgbd.cpp  test.cpp
ros_test/config/: TUM3_ros.yaml  kinectdk.yaml  kinectdk_lj.yaml
ros_test/include/: image_subscriber.h  message_flow.h  tool.h
ros_test/launch/: kinectdk.launch  kinectdk_for_tumrosbag.launch  ros_test.launch  rosbag.launch  tum3.launch
ros_test/src/: image_subscriber.cc  message_flow.cc  nbv.cpp  nbv_test.cpp  nbv_test11.cpp  nbv_test22.cpp  real_topic_test.cpp  sync_yolomessage.cpp
src/: Frame.cc  FrameDrawer.cc  LocalMapping.cc  LoopClosing.cc  MapDrawer.cc  MapPoint.cc  MapPublisher.cc  Object.cc  Optimizer.cc  System.cc  Tracking.cc  Viewer.cc  camera.cc
src/detect_3d_cuboid/: box_proposal_detail.cpp  object_3d_util.cpp
src/g2oAddition/: EdgePlane origin.cc  EdgePlane origin.h  EdgePlane.cc  EdgePlane.h  Plane3D.h  VertexPlane.cc  VertexPlane.h  VertexPlane_origin.cc
